refact: use List.of instead of Arrays.asList where beneficial